[gd_scene load_steps=15 format=3 uid="uid://fc5y3uixhvgw"]

[ext_resource type="Texture2D" uid="uid://vyr0ks75oxum" path="res://scenes/graphics/characters/drone.png" id="1_pae44"]
[ext_resource type="Script" uid="uid://cbu2mdjjda1fe" path="res://scenes/drone/drone.gd" id="1_ws74u"]
[ext_resource type="Shader" uid="uid://c62urnor8kcoj" path="res://scenes/drone/drone.tres" id="2_xanut"]
[ext_resource type="Texture2D" uid="uid://bav7n447bnsa5" path="res://scenes/graphics/fire/explosion.png" id="3_361hk"]
[ext_resource type="AudioStream" uid="uid://dtnqyh7corvdx" path="res://audio/explosion.wav" id="5_315ty"]
[ext_resource type="Texture2D" uid="uid://dijla4pisrrw8" path="res://scenes/graphics/lights/main.png" id="6_5e86u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pae44"]
radius = 12.0415945

[sub_resource type="ShaderMaterial" id="ShaderMaterial_315ty"]
shader = ExtResource("2_xanut")
shader_parameter/ColorParameter2 = Color(1, 1, 1, 1)
shader_parameter/FloatParameter = 1.0

[sub_resource type="Animation" id="Animation_ws74u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplosionSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xanut"]
resource_name = "explode"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_pae44"]
resource_name = "fly"
length = 0.4029
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_361hk"]
_data = {
&"RESET": SubResource("Animation_ws74u"),
&"explode": SubResource("Animation_xanut"),
&"fly": SubResource("Animation_pae44")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ws74u"]
radius = 174.00287

[sub_resource type="CircleShape2D" id="CircleShape2D_361hk"]
radius = 15.297058

[node name="Drone" type="CharacterBody2D" groups=["DroneGroup"]]
z_index = 1
y_sort_enabled = true
collision_layer = 4
collision_mask = 12
motion_mode = 1
script = ExtResource("1_ws74u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_pae44")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_315ty")
texture = ExtResource("1_pae44")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_361hk")
}
autoplay = "fly"

[node name="DetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone" groups=["DroneGroup"]]
shape = SubResource("CircleShape2D_ws74u")
debug_color = Color(0.8870751, 0.27530962, 0.4741553, 0.41960785)

[node name="ExplosionSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_361hk")
hframes = 8

[node name="ExplosionArea" type="Area2D" parent="." groups=["DroneGroup"]]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_361hk")
debug_color = Color(0.63046867, 0.523811, 0.22861853, 0.41960785)

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_315ty")
volume_db = -15.267

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_315ty")
volume_db = -17.83
pitch_scale = 4.0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-2, 1)
scale = Vector2(0.19000001, 0.01)
color = Color(0.99971825, 0.2133272, 0.16025296, 1)
energy = 16.0
texture = ExtResource("6_5e86u")

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
